--- a/ejemplo.css
+++ b/ejemplo.css
@@ -6,6 +6,8 @@ body {
     text-align: center;
 }
 
+/*vanesa hoy*/
+
 /* Contenedor principal del logo y título */
 .logo-container {
     padding: 20px;
