--- a/efectos.css
+++ b/efectos.css
@@ -1,24 +1,62 @@
 /* estilos.css */
-.card img {
-    width:100%;
-    height:100%;
+.body {
+      font-family: Arial, sans-serif;
+      background-color: #e97c5d;
+      margin: 10;
+      padding: 10;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 50px;
+    }
+
+    .card {
+      background: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      text-align: center;
+      width: 250px;
+      padding: 20px;
+      cursor: pointer;
+      transition: transform 0.2s ease-in-out;
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+    }
+
+    .card img {
+      width: 80px;
+      margin: 20px 0;
+    }
+
+    .card h2 {
+      color: #777;
+      margin-bottom: 10px;
+    }
+
+    .card p {
+      font-size: 14px;
+      color: #555;
+    }
+    .card img {
+    width:50%;
+    height:50%;
     object-fit:cover;
     display:block;
     transition:transform 0.35s ease, filter 0.35s ease, opacity 0.35s ease;
 }
-
-body {
-    margin: 0;
-    font-family: fantasy;
-    background-color: rgba(244, 214, 168, 0.636);
-    color: rgb(83, 36, 2);
-}
-.gallery {
+    .gallery {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 1rem;
 }
-.title {
+    .title {
     font-size: clamp(1.6rem, 3.5vw, 3 rem);
     margin: 2;
     font-weight: 700;
@@ -29,13 +67,13 @@ body {
     transition: background-position 0.6s ease;
     cursor: default;
 }
-.title:hover {
+    .title:hover {
     background-position: 100% 0;
 }
 
-main {
-    max-width: 1200px;
-    margin: 2rem auto;
+    main {
+    max-width: 120px;
+    margin: 1rem auto;
     padding: 0 1rem;
 }
 /* Título */
